--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,36 +7,35 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.3"
-  flutter: "3.0.3"
+  sdk: '>=3.0.3 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  animate_do: ^2.0.0
-  auto_route: ^4.2.1
-  collapsible_sidebar: ^2.0.0
-  convex_bottom_bar: ^3.0.0
-  dartz: ^0.10.0-nullsafety.1
-  flutter_riverpod: ^1.0.4
-  flutter_screenutil: ^5.5.3+2
-  freezed_annotation: ^2.1.0
-  http: ^0.13.2
-  json_annotation: ^4.0.1
-  lottie: ^1.0.1
-  responsive_builder: ^0.4.1
-  riverpod: ^1.0.3
+  animate_do: any
+  auto_route: any
+  collapsible_sidebar: any
+  convex_bottom_bar: any
+  dartz: any
+  flutter_riverpod: any
+  flutter_screenutil: ^5.8.4
+  freezed_annotation: any
+  http: any
+  json_annotation: any
+  lottie: any
+  responsive_builder: any
+  riverpod: any
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  auto_route_generator: 4.2.1
-  build_runner: ^2.0.2
-  freezed: ^2.1.0+1
+  auto_route_generator: any
+  build_runner: any
+  freezed: any
   json_serializable: any
-  mocktail: ^0.1.0
-  very_good_analysis: ^2.0.0
+  mocktail: any
+  very_good_analysis: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
